--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="home one">
                 <!-- <h5>Home</h5> -->
-                <a href="/bakery.html"><h5>Home</h5></a>
+                <a href="/index.html"><h5>Home</h5></a>
             </div>
             <div class="Gallery one">
                 <!-- <h5>Gallery</h5> -->
